--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -21,8 +21,8 @@
     <%= f.text_area :description %>
   </div>
   <div class="field">
-    <%= f.label :price %><br />
-    <%= f.text_field :price %>
+    <%= f.label :price_in_dollars_and_cents, 'Price' %><br />
+    <%= f.text_field :price_in_dollars_and_cents %>
   </div>
   <div class="actions"><%= f.submit "Create Product" %></div>
 <% end %>
