--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -21,7 +21,7 @@
     <%= f.text_area :description %>
   </div>
   <div class="field">
-    <%= f.label :price_in_dollars_and_cents %><br />
+    <%= f.label :price_in_dollars_and_cents, "Price" %><br />
     <%= f.text_field :price_in_dollars_and_cents %>
   </div>
   <div class="actions"><%= f.submit "Update Product" %></div>
