--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,3 +1,4 @@
 <% @products.each do |product| %>
   <p><%= link_to product.title, product_path(product) %></p>
 <% end %>
+<%= link_to "Create new product", new_product_path %>
