--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -21,6 +21,14 @@
     <%= f.text_area :description %>
   </div>
   <div class="field">
+    Categories<br/>
+    <%= hidden_field_tag "product[category_ids][]", nil %>
+    <% Category.all.each do |category| %>
+      <%= check_box_tag "product[category_ids][]", category.id, @product.category_ids.include?(category.id), id: dom_id(category) %>
+      <%= label_tag dom_id(category), category.name %><br/>
+    <% end %><br/>
+  </div>
+  <div class="field">
     <%= f.label :price_in_dollars_and_cents, 'Price' %><br />
     <%= f.text_field :price_in_dollars_and_cents %>
   </div>
