--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,5 +1,11 @@
 <p><%= @product.title %></p>
 <p><%= @product.description %></p>
-<p><%= @product.price %></p>
+<p><%= @product.price/100.00 %></p>
 <p><%= @product.active? %></p>
+<p>Categories:<br/>
+  <%= @product.categories_list %>
+</p>
+<br/>
+<p><%= link_to "Edit product", edit_product_path(@product) %></p>
 <p><%= link_to "Delete", product_path(@product), method: 'Delete', confirm: "Are you sure you want to delete?" %></p>
+<p><%= link_to "Back to all products", products_path %></p>
