--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,3 +1,5 @@
+<p id="notice"><%= notice %></p>
+
 <% @products.each do |product| %>
   <p><%= link_to product.title, product_path(product) %></p>
 <% end %>
