updated currency logic

--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -29,8 +29,8 @@
     <% end %><br/>
   </div>
   <div class="field">
-    <%= f.label :price_in_dollars_and_cents, "Price" %><br />
-    <%= f.text_field :price_in_dollars_and_cents %>
+    <%= f.label :price_in_dollars, "Price" %><br />
+    <%= f.text_field :price_in_dollars %>
   </div>
   <div class="actions"><%= f.submit "Update Product" %></div>
 <% end %>
