got rid of 'remote: true' to turn off javascript in products show

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -13,7 +13,7 @@
  </div>
 </div>
 
-<p><%= button_to "Add to Cart", line_items_path(product_id: @product), remote: true %></p>
+<p><%= button_to "Add to Cart", line_items_path(product_id: @product) %></p>
 
 <p><%= link_to "Edit product", edit_product_path(@product) %></p>
 <p><%= link_to "Delete", product_path(@product), method: 'Delete', confirm: "Are you sure you want to delete?" %></p>
