--- a/app/views/carts/_cart.html.erb
+++ b/app/views/carts/_cart.html.erb
@@ -8,6 +8,10 @@
   </tr>
 
 </table>
-
-<%= button_to 'Empty cart', cart, method: :delete,
+<% if cart.line_items.count >= 1 %>
+  <%= button_to "Checkout", {:controller => "orders", :action => "new"}, :method => :get %>
+  <%= button_to 'Empty cart', cart, method: :delete,
     data: { confirm: 'Are you sure?' } %>
+<% else %>
+  Put something in your cart!!
+<% end %>
