created a working signup view using kareem's design

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,32 +1,41 @@
-<h1>Sign Up</h1>
 
-<%= form_for @user do |f| %>
-  <% if @user.errors.any? %>
-    <div class="error_messages">
-      <h2>Form is invalid</h2>
-      <ul>
-        <% @user.errors.full_messages.each do |message| %>
-          <li><%= message %></li>
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
 
-  <div class="field">
-    <%= f.label :full_name %><br />
-    <%= f.text_field :full_name %>
+<div class='row-fluid'>
+  <div class='span6 offset3'>
+    <h2 class='text-center'>Create An Account</h2>
+      <a href='#'>
+        <p class='text-center'>Already registered? Sign In here</p>
+      </a>
+      <%= simple_form_for @user, :html => { :class => 'form-horizontal bs-container' } do |f| %>
+        <%= f.error_notification %>
+        <%= f.input :full_name %>
+        <%= f.input :email %>
+        <%= f.input :password %>
+        <%= f.input :password_confirmation %>
+        <%= f.button :submit %>
+      <% end %>
   </div>
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.text_field :email %>
-  </div>
-  <div class="field">
-    <%= f.label :password %><br />
-    <%= f.password_field :password %>
-  </div>
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation %>
-  </div>
-  <div class="actions"><%= f.submit "Sign Up" %></div>
-<% end %>
+</div>
+
+
+<!-- <div class='control-group'>
+        <label class='control-label'>Full Name</label>
+        <input name='full_name' type='text'>
+      </div>
+      <div class='control-group'>
+        <label class='control-label'>Email</label>
+        <input name='email' type='text'>
+      </div>
+      <div class='control-group'>
+        <label class='control-label'>Password</label>
+        <input id='inputPassword' name='password' type='password'>
+      </div>
+      <div class='control-group'>
+        <label class='control-label'>Password Confirmation</label>
+        <input id='inputPassword' name='confirm_password' type='password'>
+      </div>
+      <div class='control-group'>
+        <div class='controls'>
+          <button class='btn' type='submit'>Register</button>
+        </div>
+      </div> -->
