--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -2,3 +2,208 @@
 body { padding-top: 60px; }
 @import "bootstrap-responsive";
 
+@mixin product_detail_header {
+
+  h4 {
+    font-size: 1.3em; 
+    line-height: 0;
+    margin-bottom: 20px;
+  }
+
+}
+
+body {
+  padding-top: 60px;
+  padding-bottom: 40px;
+}
+
+.nav-menus {
+  border-top: 2px solid #333;
+  padding-top: 5px;
+}
+
+.nav-pills {
+
+  li.active {
+    a, a:hover {
+      color: #ffffff;
+      background-color: #333; 
+    }
+  }
+
+  li a {
+    padding-top: 8px;
+    padding-bottom: 8px;
+    margin-top: 2px;
+    margin-bottom: 2px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    border-radius: 5px;
+    color:#333; 
+  }
+}
+
+.product_list li:nth-child(5n+5) {
+  margin-left: 0px;
+}
+
+.page-header {
+  margin-bottom: 20px;
+  padding-bottom: 0px;
+
+  h1 {
+    font-size: 28px;
+  }
+}
+.logo {
+  margin-top: 27px;
+}
+
+.breadcrumb {
+  background-image: -webkit-linear-gradient(top, #ffffff, #f5f5f5);
+  border: 1px solid #ddd;
+  box-shadow: inset 0 1px 0 #ffffff;
+}
+
+.cart_link {
+  margin-top: 50px;
+
+  span {
+    font-weight: bold;
+    font-size: 18px;
+  }
+
+  p {
+    display: inline;
+    font-size: 16px;
+    margin-right: 5px;
+  }
+}
+
+.detail_box {
+
+  .detail_photo {
+    float: left;
+  }
+
+  .prod_desc {
+    border-right: 1px solid #eeeeee;
+    padding-right: 3px;
+
+    .desc {
+      height: 175px;
+      @include product_detail_header;
+
+      // h4 {
+      //   font-size: 1.3em; 
+      //   line-height: 0;
+      //   margin-bottom: 20px;
+      // }
+
+      p {
+        font-size: 14px;
+      }
+    }
+
+    .price {
+      span.price_label {
+        font-size: 22px;
+        font-weight: bold;
+      }
+    }
+  }
+
+  .form-horizontal .form-actions {
+    padding-left: 40px;
+  }
+}
+
+.cart_sidebar {
+  @include product_detail_header;
+
+  
+  ul {
+    list-style-type: none; 
+    margin-left: 0px;
+  }
+
+  .total-price {
+    border-top: 2px solid #333;
+    margin-top: 10px;
+    padding-top: 10px;
+    padding-bottom: 20px; 
+  }
+}
+
+table.cart-detail {
+  
+  td.description {
+    span.name {
+      font-weight: bold;
+    }
+
+    p {
+      font-weight: normal;
+      margin-top: 10px;
+    }
+    
+    .remove_product {
+      margin-top: 10px;
+    }
+
+  }
+  .img_cart {
+    width: 70px;
+    height: 80px;
+  }
+}
+
+table tr.total {
+  font-size: 16px;
+  font-weight: bold;
+}
+
+form.bs-container {
+  position: relative;
+  margin: 15px 0;
+  font-size: 16px;
+  padding: 39px 19px 14px;
+  *padding-top: 19px;
+  background-color: #fff;
+  border: 1px solid #ddd;
+  -webkit-border-radius: 4px;
+     -moz-border-radius: 4px;
+          border-radius: 4px;
+
+  label {
+    font-size: 14px;
+  }
+         
+
+
+  .redirect {
+    margin-bottom: 20px;
+  }
+
+   label {
+     margin-right: 25px;
+   }
+}
+
+
+.footer { 
+
+  h3 {
+    border-bottom: 2px solid #333;
+    margin-bottom: 10px; 
+  }
+
+  ul {
+    list-style-type: none;
+    margin-left: 0;
+
+    li {
+      margin-bottom: 3px;
+    }
+  }
+}
