--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,22 +1,130 @@
 <!DOCTYPE html>
-<html>
-<head>
-  <title>StoreEngine</title>
-  <%= stylesheet_link_tag    "application", :media => "all" %>
-  <%= javascript_include_tag "application" %>
-  <%= csrf_meta_tags %>
-</head>
-<body>
+<html lang='en' xhmns='http://www.w3.org/1999/xhtml' xml:lang='en'>
+  <head>
+    <title>Cloak &amp; Dagger Login</title>
+    <meta content='width=device-width, initial-scale=1.0' name='viewport'>
+    <%= stylesheet_link_tag    "application", :media => "all" %>
+    <%= javascript_include_tag "application" %>
+    <%= csrf_meta_tags %>
+  </head>
+  
+  <body>
+    <div class='navbar navbar-fixed-top'>
+      <div class='navbar-inner'>
+        <div class='container'>
+          <a class='btn btn-navbar' data-toggle='.nav-collapse'>
+            <span class='icon-bar'></span>
+            <span class='icon-bar'></span>
+            <span class='icon-bar'></span>
+          </a>
+          <div class='nav-collapse'>
+            <ul class='nav pull-right'>
+              <li>
+                <a class='disabled'>
+                  My Account
+                </a>
+              </li>
+              <li>
+                <a class='active' href='#'>
+                  Sign In
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
 
-<%= yield %>
-  <% if current_user %>
-    Logged in as <%= current_user.email %>.
-    <%= link_to "Log Out", logout_path %>
-  <% else %>
-    <%= link_to "Sign Up", signup_path %> or
-    <%= link_to "Log In", login_path %>
-  <% end %>
+    <div class='container'>
 
-</body>
+      <div class='row-fluid'>
+        <div class='span6 logo'>
+          <h1>
+            <a href='#'></a>
+            Cloak &amp; Dagger
+          </h1>
+        </div>
+      </div>
+
+      <div class='row-fluid'>
+        <div class='span12 nav-menus'>
+          <ul class='nav nav-pills'></ul>
+        </div>
+      </div>
+
+  <%= yield %>
+
+    <hr>
+      <div class='row-fluid footer'>
+        <div class='span4'>
+          <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+          <h3>Information</h3>
+          <ul>
+            <li>
+              <a href='#'>Contact</a>
+            </li>
+            <li>
+              <a href='#'>Delivery</a>
+            </li>
+            <li>
+              <a href='#'>FAQ</a>
+            </li>
+            <li>
+              <a href='#'>Terms and condition</a>
+            </li>
+          </ul>
+        </div>
+        <div class='span4'>
+          <h3>Stay in Touch</h3>
+          <ul>
+            <li>
+              <a href='#'>Facebook</a>
+            </li>
+            <li>
+              <a href='#'>Twitter</a>
+            </li>
+            <li>
+              <div class='control-group'>
+                <div class='controls'>
+                  <div class='input-prepend input-append'>
+                    <div class='span add-on'>
+                      <i class='icon-envelope'></i>
+                    </div>
+                    <input class='span6 appendedPrependedInput' placeholder='Enter your email' type='text'>
+                    <input class='btn' name='submit' type='submit' value='Subcribe'>
+                  </div>
+                </div>
+              </div>
+            </li>
+          </ul>
+        </div>
+        <div class='span4'>
+          <h3>Other stuff</h3>
+          <ul>
+            <li>
+              <a href='#'>Link</a>
+            </li>
+            <li>
+              <a href='#'>Link</a>
+            </li>
+            <li>
+              <a href='#'>Link</a>
+            </li>
+            <li>
+              <a href='#'>Link</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+
+    </div> 
+  </body>
 </html>
+
 
