--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,31 +9,7 @@
   </head>
   
   <body>
-    <div class='navbar navbar-fixed-top'>
-      <div class='navbar-inner'>
-        <div class='container'>
-          <a class='btn btn-navbar' data-toggle='.nav-collapse'>
-            <span class='icon-bar'></span>
-            <span class='icon-bar'></span>
-            <span class='icon-bar'></span>
-          </a>
-          <div class='nav-collapse'>
-            <ul class='nav pull-right'>
-              <li>
-                <a class='disabled'>
-                  My Account
-                </a>
-              </li>
-              <li>
-                <a class='active' href='#'>
-                  Sign In
-                </a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div>
+    <%= render :partial => "shared/navbar" %>
 
     <div class='container'>
 
@@ -52,9 +28,13 @@
         </div>
       </div>
 
-  <%= yield %>
+      <%= render :partial => "shared/flash_messages", :locals => {:flash => flash} %>
 
-    <hr>
+
+
+      <%= yield %>
+
+      <hr>
       <div class='row-fluid footer'>
         <div class='span4'>
           <tr>
