--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,103 +7,20 @@
     <%= javascript_include_tag "application" %>
     <%= csrf_meta_tags %>
   </head>
-  
+
   <body>
     <%= render :partial => "shared/navbar" %>
 
     <div class='container'>
-
-      <div class='row-fluid'>
-        <div class='span6 logo'>
-          <h1>
-            <a href='#'></a>
-            Cloak &amp; Dagger
-          </h1>
-        </div>
-      </div>
-
-      <div class='row-fluid'>
-        <div class='span12 nav-menus'>
-          <ul class='nav nav-pills'></ul>
-        </div>
-      </div>
-
+      <%= render :partial => "shared/brand_header" %>
+      <%= render :partial => "shared/sub_menu" %>
       <%= render :partial => "shared/flash_messages", :locals => {:flash => flash} %>
-
-
 
       <%= yield %>
 
-      <hr>
-      <div class='row-fluid footer'>
-        <div class='span4'>
-          <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-          </tr>
-          <h3>Information</h3>
-          <ul>
-            <li>
-              <a href='#'>Contact</a>
-            </li>
-            <li>
-              <a href='#'>Delivery</a>
-            </li>
-            <li>
-              <a href='#'>FAQ</a>
-            </li>
-            <li>
-              <a href='#'>Terms and condition</a>
-            </li>
-          </ul>
-        </div>
-        <div class='span4'>
-          <h3>Stay in Touch</h3>
-          <ul>
-            <li>
-              <a href='#'>Facebook</a>
-            </li>
-            <li>
-              <a href='#'>Twitter</a>
-            </li>
-            <li>
-              <div class='control-group'>
-                <div class='controls'>
-                  <div class='input-prepend input-append'>
-                    <div class='span add-on'>
-                      <i class='icon-envelope'></i>
-                    </div>
-                    <input class='span6 appendedPrependedInput' placeholder='Enter your email' type='text'>
-                    <input class='btn' name='submit' type='submit' value='Subcribe'>
-                  </div>
-                </div>
-              </div>
-            </li>
-          </ul>
-        </div>
-        <div class='span4'>
-          <h3>Other stuff</h3>
-          <ul>
-            <li>
-              <a href='#'>Link</a>
-            </li>
-            <li>
-              <a href='#'>Link</a>
-            </li>
-            <li>
-              <a href='#'>Link</a>
-            </li>
-            <li>
-              <a href='#'>Link</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-
+      <%= render :partial => "shared/footer" %>
     </div> 
+
   </body>
 </html>
 
