--- a/app/views/shared/_sub_menu.html.erb
+++ b/app/views/shared/_sub_menu.html.erb
@@ -1,27 +1,32 @@
+<% if categories %>
 <div class='row-fluid'>
+
   <div class='span12 nav-menus'>
     <ul class='nav nav-pills'>
       <li>
         <a href='#'>All Products</a>
       </li>
-      <li>
-        <a href='#'>Category 1</a>
-      </li>
-      <li>
-        <a href='#'>Category 2</a>
-      </li>
-      <li>
-        <a href='#'>Category 3</a>
-      </li>
-      <li>
-        <a href='#'>Category 4</a>
-      </li>
-      <li>
-        <a href='#'>Category 5</a>
-      </li>
-      <li>
-        <a href='#'>Category</a>
-      </li>
+      <% categories.each do |category| %>  
+        <li>
+        <a href='#'><%= category.name =%> </a>
+        </li>
+      <% end %> 
+      <%# <li> %>
+      <%#   <a href='#'>Category 2</a> %>
+      <%# </li> %>
+      <%# <li> %>
+      <%#   <a href='#'>Category 3</a> %>
+      <%# </li> %>
+      <%# <li> %>
+      <%#   <a href='#'>Category 4</a> %>
+      <%# </li> %>
+      <%# <li> %>
+      <%#   <a href='#'>Category 5</a> %>
+      <%# </li> %>
+      <%# <li> %>
+      <%#   <a href='#'>Category</a> %>
+      <%# </li> %>
     </ul>
   </div>
 </div>
+<% end %>
