--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -1,1 +1,159 @@
-<h1> Welcome to our store </h1>
+<div class='row-fluid'>
+  <div class='span12'></div>
+  <div class='carousel slide' id='myCarousel'>
+    <div class='carousel-inner'>
+      <div class='item'>
+        <%= image_tag "slider1.png" %>
+        <div class='carousel-caption'>
+          <h4>First caption</h4>
+          <p>lorem ipsum lorem ipsum</p>
+        </div>
+      </div>
+      <div class='item active'>
+        <%= image_tag "slider2.png" %>
+        <div class='carousel-caption'>
+          <h4>First caption</h4>
+          <p>lorem ipsum lorem ipsum</p>
+        </div>
+      </div>
+      <div class='item'>
+        <%= image_tag "slider3.png" %>
+        <div class='carousel-caption'>
+          <h4>First caption</h4>
+          <p>lorem ipsum lorem ipsum</p>
+        </div>
+      </div>
+    </div>
+    <a class='left carousel-control' data-slide='prev' href='#myCarousel'>&lsaquo;</a>
+    <a class='right carousel-control' data-slide='next' href='#myCarousel'>&rsaquo;</a>
+  </div>
+</div>
+<div class='row-fluid'>
+  <div class='span12'>
+    <div class='page-header'>
+      <h1>
+        Category name
+      </h1>
+    </div>
+  </div>
+</div>
+<div class='row-fluid'>
+  <div class='thumbnails'>
+    <li class='span3'>
+      <div class='thumbnail'>
+        <a href='#'>
+          <%= image_tag "product1.jpg" %>
+        </a>
+        <div class='caption'>
+          <h5>Shirt</h5>
+          <p>$20.50</p>
+          <p>Available</p>
+        </div>
+      </div>
+    </li>
+    <li class='span3'>
+      <div class='thumbnail'>
+        <a href='#'>
+          <%= image_tag "product2.jpg" %>
+        </a>
+        <div class='caption'>
+          <h5>Shirt</h5>
+          <p>$20.50</p>
+          <p>Available</p>
+        </div>
+      </div>
+    </li>
+    <li class='span3'>
+      <div class='thumbnail'>
+        <a href='#'>
+          <%= image_tag "product3.jpg" %>
+        </a>
+        <div class='caption'>
+          <h5>Shirt</h5>
+          <p>$20.50</p>
+          <p>Available</p>
+        </div>
+      </div>
+    </li>
+    <li class='span3'>
+      <div class='thumbnail'>
+        <a href='#'>
+          <%= image_tag "product4.jpg" %>
+        </a>
+        <div class='caption'>
+          <h5>Shirt</h5>
+          <p>$20.50</p>
+          <p>Available</p>
+        </div>
+      </div>
+    </li>
+  </div>
+  <div class='see_all'>
+    <a class='pull-right' href='#'>See all [category name]</a>
+  </div>
+</div>
+<div class='row-fluid'>
+  <div class='span12'>
+    <div class='page-header'>
+      <h1>
+        Category name
+      </h1>
+    </div>
+  </div>
+</div>
+<div class='row-fluid'>
+  <div class='thumbnails'>
+    <li class='span3'>
+      <div class='thumbnail'>
+        <a href='#'>
+          <%= image_tag "product1.jpg" %>
+        </a>
+        <div class='caption'>
+          <h5>Shirt</h5>
+          <p>$20.50</p>
+          <p>Available</p>
+        </div>
+      </div>
+    </li>
+    <li class='span3'>
+      <div class='thumbnail'>
+        <a href='#'>
+          <%= image_tag "product2.jpg" %>
+        </a>
+        <div class='caption'>
+          <h5>Shirt</h5>
+          <p>$20.50</p>
+          <p>Available</p>
+        </div>
+      </div>
+    </li>
+    <li class='span3'>
+      <div class='thumbnail'>
+        <a href='#'>
+          <%= image_tag "product3.jpg" %>
+        </a>
+        <div class='caption'>
+          <h5>Shirt</h5>
+          <p>$20.50</p>
+          <p>Available</p>
+        </div>
+      </div>
+    </li>
+    <li class='span3'>
+      <div class='thumbnail'>
+        <a href='#'>
+          <%= image_tag "product4.jpg" %>
+        </a>
+        <div class='caption'>
+          <h5>Shirt</h5>
+          <p>$20.50</p>
+          <p>Available</p>
+        </div>
+      </div>
+    </li>
+  </div>
+  <div class='see_all'>
+    <a class='pull-right' href='#'>See all [category name]</a>
+  </div>
+</div>
+
