--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -2,7 +2,7 @@
 
 <div class='row-fluid'>
   <div class='span6 offset3'>
-    <h2 class='text-center'>Create An Account</h2>
+    <h2 class='text-center'>Create an Account</h2>
       <a href='#'>
         <p class='text-center'>Already registered? Sign In here</p>
       </a>
