--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -15,7 +15,12 @@ body {
   padding-top: 60px;
   padding-bottom: 40px;
 }
-
+#signup, #login {
+  margin-top: 30px;
+}
+.alert {
+  margin-top: 10px;
+}
 .logo-banner {
   border-bottom: 2px solid #333;
 }
