--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -1,6 +1,7 @@
 @import "bootstrap";
 body { padding-top: 60px; }
 // @import "bootstrap-responsive";
+@import "font-awesome";
 
 @mixin product_detail_header {
 
