tests updated, trying to implement quantity increment/decrement

--- a/app/views/line_items/_line_item.html.erb
+++ b/app/views/line_items/_line_item.html.erb
@@ -5,5 +5,6 @@
 <% end %>
   <td><%= line_item.quantity %>&times;</td>
   <td><%= line_item.product.title %></td>
+  <%= button_to "+", {:controller => "carts", :action => "add_quantity_to_cart"}, :method => :put %>
   <td class="item_price"><%= number_to_currency(line_item.total_price) %></td>
 </tr>
