--- a/app/views/orders/edit.html.erb
+++ b/app/views/orders/edit.html.erb
@@ -16,6 +16,5 @@
     <%= f.label :status %><br />
     <%= f.text_field :status %>
   </div>
-  
-  
+  <div class="actions"><%= f.submit "Update Order" %></div>
 <% end %>
