--- a/app/views/carts/_cart.html.erb
+++ b/app/views/carts/_cart.html.erb
@@ -9,6 +9,10 @@
 
 </table>
 <% if cart.line_items.count >= 1 %>
+  <% cart.line_items.each do |li| %>
+    <%= button_to "+", add_quantity_to_cart_path(li.product_id), :method => :put %>
+    <%= button_to "-", decrease_quantity_from_cart_path(li.product_id), :method => :put %>
+  <% end %>
   <%= button_to "Checkout", {:controller => "orders", :action => "new"}, :method => :get %>
   <%= button_to 'Empty cart', cart, method: :delete,
     data: { confirm: 'Are you sure?' } %>
