--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -13,6 +13,6 @@
 
 </table>
 
-<%= button_to "Checkout", {:controller => "orders", :action => "new"}, :method => :get} %>
+<%= button_to "Checkout", {:controller => "orders", :action => "new"}, :method => :get %>
 <%= button_to 'Empty cart', @cart, method: :delete,
     data: { confirm: 'Are you sure?' } %>
