--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,22 +1,26 @@
 <!DOCTYPE html>
-<html>
-<head>
-  <title>StoreEngine</title>
-  <%= stylesheet_link_tag    "application", :media => "all" %>
-  <%= javascript_include_tag "application" %>
-  <%= csrf_meta_tags %>
-</head>
-<body>
+<html lang='en' xhmns='http://www.w3.org/1999/xhtml' xml:lang='en'>
+  <head>
+    <title>Cloak &amp; Dagger Login</title>
+    <meta content='width=device-width, initial-scale=1.0' name='viewport'>
+    <%= stylesheet_link_tag    "application", :media => "all" %>
+    <%= javascript_include_tag "application" %>
+    <%= csrf_meta_tags %>
+  </head>
 
-<%= yield %>
-  <% if current_user %>
-    Logged in as <%= current_user.email %>.
-    <%= link_to "Log Out", logout_path %>
-  <% else %>
-    <%= link_to "Sign Up", signup_path %> or
-    <%= link_to "Log In", login_path %>
-  <% end %>
+  <body>
+    <%= render :partial => "shared/navbar" %>
 
-</body>
+    <div class='container'>
+      <%= render :partial => "shared/brand_header" %>
+      <%= render :partial => "shared/sub_menu", :locals => {:categories =>  @categories} %>
+      <%= render :partial => "shared/flash_messages", :locals => {:flash => flash} %>
+
+      <%= yield %>
+
+      <%= render :partial => "shared/footer" %>
+    </div> 
+
+  </body>
 </html>
 
