--- a/app/views/shared/_brand_header.html.erb
+++ b/app/views/shared/_brand_header.html.erb
@@ -8,9 +8,23 @@
     </div>
     <div class='span6'>
       <div class='cart_link pull-right'>
-        <a href='#'>
-          <span>1</span>
-          <p>item in cart</p>
+        <a href='cart_path'>
+          <span>
+            <% current_cart_id = session[:cart_id] %>
+            <% current_cart = Cart.find(current_cart_id) %>
+          <% if current_cart %>
+            <% cart_count = [] %>
+            <% current_cart.line_items.each do |li| %>
+            <% cart_count << li.quantity %>
+            <% end %>
+            <% items_count = cart_count.inject(:+) %>
+          <% end %>
+          </span>
+          <% if items_count == 1 %>
+            <p>1 item in cart</p>
+          <% else %>
+            <p><%= link_to "#{items_count} items in cart", cart_path(current_cart) %></p>
+          <% end %>
           <i class='icon-shopping-cart icon-2x'></i>
         </a>
       </div>
