--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -1,18 +1,111 @@
-<% if notice %>
-<p id="notice"><%= notice %></p>
-<% end %>
+    <ul class='breadcrumb'>
+        <li>
+          <%= link_to "Home", "/" %>
+          <span class='divider'>/</span>
+        </li>
+        <li class='active'>
+          Cart
+        </li>
+      </ul>
+      <div class='row-fluid'>
+        <div class='span12'>
+          <div class='page-header'>
+            <h1>
+              Shopping Cart
+            </h1>
+          </div>
+        </div>
+      </div>
+      <div class='row-fluid'>
+        <div class='span12'>
+          <table class='table table-striped table-bordered cart-detail'>
+            <thead>
+              <tr>
+                <th class='span1'>Product</th>
+                <th class='span4'>Description</th>
+                <th class='span3'>Quantity</th>
+                <th class='span2'>Price</th>
+                <th class='span2'>Subtotal</th>
+              </tr>
+            </thead>
+            <tbody>
+              <% @cart.line_items.each do |line_item| %>
+              <tr>
+                <td>
+                  <%= image_tag "product14.png" %>
+                </td>
+                <td class='description'>
+                  <span class='name'>
+                    <a href='#'><%= line_item.product.title %></a>
+                  </span>
+                  <p>
+                   <%= line_item.product.description %>
+                  </p>
+                  <div class='remove_product'>
+                    <%= button_to "Delete item from cart", line_item_path(line_item), :method => :delete, confirm: "Are you sure?", :class => "btn btn-link" %>
+                  </div>
+                </td>
+                <td>
+                  <form class='form-inline'>
+                    <span class='uneditable-input input-small' type='text'><%= line_item.quantity %></span>
+                    <div class="btn-group">
+                      <button class="btn"><%= link_to "+", add_quantity_to_cart_path(line_item.product_id), :method => :put %></button>
+                      <button class="btn"><%= link_to "-", decrease_quantity_from_cart_path(line_item.product_id), :method => :put %></button>
+                    </div>
+                  </form>
+                </td>
+                <td>
+                  <%= number_to_currency(line_item.product.price_in_dollars) %>
+                </td>
+                <td>
+                  <%= number_to_currency(line_item.total_price) %>
+                </td>
+              </tr>
+            </tbody>
+            <% end %>
+          </table>
+          <table class='table total table-bordered'>
+            <tbody>
+              <tr>
+                <td class='span8'></td>
+                <td class='span2'>Shipping</td>
+                <td class='span2'>$0.00</td>
+              </tr>
+              <tr class='total'>
+                <td class='span8'></td>
+                <td class='span2'>Total</td>
+                <td class='span2'><%= number_to_currency(@cart.total_price) %></td>
+              </tr>
+            </tbody>
+          </table>
+          <div class='span20 form-actions'>
+            <div class='span5 pull-left'>
+              <%= button_to "Continue Shopping", products_path, :method => :get, :class => "btn" %></div>
+            <div class='span2 pull-right'>
+              <%= button_to "Checkout", {:controller => "orders", :action => "new"}, :method => :get, :class => "btn btn-inverse" %>
+            </div>
+          </div>
+        </div>
+      </div>
 
-<h2>Your Cart</h2>
+
+
+
+<%#<% if notice %>
+<%#<p id="notice"><%= notice %>
+<%#<% end %>
+
+<%#<h2>Your Cart</h2>
 <table>
   <%= render(@cart.line_items) %>
 
-  <tr class="total_line">
+ <%# <tr class="total_line">
     <td colspan="2">Total</td>
-    <td class="total_cell"><%= number_to_currency(@cart.total_price) %></td>
-  </tr>
+    <td class="total_cell"><%= number_to_currency(@cart.total_price) %>
+ <%# </tr>
 
 </table>
 
 <%= button_to "Checkout", {:controller => "orders", :action => "new"}, :method => :get %>
-<%= button_to 'Empty cart', @cart, method: :delete,
+<%#<%= button_to 'Empty cart', @cart, method: :delete,
     data: { confirm: 'Are you sure?' } %>
