--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -1,12 +1,12 @@
-<%= simple_form_for @product, :html => {:class => ''} do |f| =%>
+<%= simple_form_for @product, :html => {:multipart => true} do |f| =%>
   <%= f.error_notification %>
-  <%= f.input :title %>
-  <%= f.input :description %>
+  <%= f.input :title, input_html: {class: "span6"} %>
+  <%= f.input :description, input_html: {class: "span6", rows: 10} %>
   <%= f.input :price_in_dollars %>
-  <%= f.input :active, as: :boolean %>
+  <%= f.input :active, as: :radio_buttons %>
 
-  <%= f.association :categories, as: :check_boxes %>
-  <%= f.input :photo, as: :file %>
+  <%= f.association :categories, as: :check_boxes, :item_wrapper_class => 'inline' %>
+  <%= f.input :photo, as: :file, label: "Upload pic" %>
 
   <div class="form-actions">
     <%= f.button :submit, :class => 'btn-primary' %>
