added admin name space and admin/product controller and views

--- a/app/views/admin/products/new.html.erb
+++ b/app/views/admin/products/new.html.erb
@@ -1,2 +1,9 @@
-<h1>Admin::Products#new</h1>
-<p>Find me in app/views/admin/products/new.html.erb</p>
+<div class='row-fluid'>
+  <div class='span12'>
+    <div class='span6'>
+      <h3>Add New Product</h3>
+    </div>
+  </div>
+</div>
+<%= render 'form' %>
+
