--- a/app/views/admin/products/show.html.erb
+++ b/app/views/admin/products/show.html.erb
@@ -27,9 +27,8 @@
 <div class='row-fluid'>
   <div class='span12'>
     <div class='span6'>
-      <h3>Edit Existing Product</h3>
+      <h3>Product Name</h3>
     </div>
   </div>
 </div>
-<%= render 'form' %>
 
