--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -9,6 +9,12 @@
       <div class='nav-collapse'>
         <ul class='nav pull-right'>
           <% if current_user %>
+            <% if current_user.display_name != nil %>
+              <% user_name = current_user.display_name %>
+            <% else %>
+              <% user_name = current_user.full_name %>
+            <% end %>
+            <li><%= "Logged in as #{user_name}" %></li>
             <li><%= link_to "My Account", user_path(current_user) %></li>
             <li><%= link_to "Logout", logout_path %></li>
           <% else %>
