working on pagination

--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,14 +1,47 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <b>Name:</b>
-  <%= @category.name %>
-</p>
-<p>See all associated products:<br/>
-  <% @category.products.each do |product| %>
-    <%= link_to product.title, product_path(product) %>
-  <% end %>
-</p>
+
+<!-- <p>See all associated products:<br/>
+ -->  
+
+ <ul class="breadcrumb">
+  <li>
+    <span class="divider"><!----></span>
+  </li>
+  <li class="active">
+    <%= link_to 'Home', '#' %><%= @link %>
+  </li>
+</ul>
+
+<div class="row-fluid">
+  <div class="span12">
+    <div class="page-header">
+      <h1>
+        <%= @category.name.capitalize %>
+      </h1>
+    </div>
+  </div>
+  <div class="row-fluid">
+    <div class="thumbnails product_list">
+      <% @category.products.each do |product| %>
+      <li class="span3">
+        <div class="thumbnail">
+          <%= image_tag "product1.jpg" %>
+          <div class="caption">
+            <p><%= link_to product.title, product_path(product) %></p>
+            <p><%= link_to product.price_in_dollars, product_path(product) %></p>
+            <!-- <p>$20.50</p> -->
+          </div>
+        </div>
+      </li>
+      <% end %>
+    </div>
+  </div>
+</div>
+
+  
+<!-- </p>
+ -->
 
 <%= link_to 'Edit', edit_category_path(@category) %> |
 <%= link_to 'Back', categories_path %>
