--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,6 +1,185 @@
 <p id="notice"><%= notice %></p>
+      <div class="row-fluid">
+        <div class="span12 nav-menus">
+          <ul class="nav nav-pills">
+            <li>
+              <a>All Products</a>
+            </li>
+            <li>
+              <a>Category 1</a>
+            </li>
+            <li>
+              <a>Category 2</a>
+            </li>
+            <li>
+              <a>Category 3</a>
+            </li>
+            <li>
+              <a>Category 4</a>
+            </li>
+            <li>
+              <a>Category 5</a>
+            </li>
+            <li>
+              <a>{:href =>"#"} Category 6</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      
 
-<% @products.each do |product| %>
-  <p><%= link_to product.title, product_path(product) %></p>
-<% end %>
-<%= link_to "Create new product", new_product_path %>
+      <ul class="breadcrumb">
+        <li>
+          <span class="divider"><!----></span>
+        </li>
+        <li class="active">
+          All Products
+        </li>
+      </ul>
+
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<!-- <html>{:xhmns => "http://www.w3.org/1999/xhtml", :lang => "en", "xml:lang" => "en"}
+  <head>
+    <meta />{:name => "viewport", :content => "width=device-width, initial-scale=1.0"}<link />{:href => "css/bootstrap.css", :rel => "stylesheet", :type => "text/css"}<link />{:href => "css/font-awesome.css", :rel => "stylesheet", :type => "text/css"}<link />{:href => "css/application.css", :rel => "stylesheet", :type => "text/css"}<title>Cloak &amp; Dagger</title>
+  </head> -->
+  <body>
+    <div class="navbar navbar-fixed-top">
+      <div class="navbar-inner">
+        <div class="container">
+          <a class="btn btn-navbar">{"data-toggle"=>"collapse", "data-toggle"=>".nav-collapse"}
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span></a>
+          <div class="nav-collapse">
+            <ul class="nav pull-right">
+              <li>
+                <a class="disabled">
+                  My Account
+                </a>
+              </li>
+              <li>
+                <a class="active">{:href => "#"}
+                  Sign In</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+      
+      <%= will_paginate @products%>
+
+      <div class="row-fluid">
+        <div class="span12">
+          <div class="page-header">
+            <h1>
+            </h1>
+          </div>
+        </div>
+      </div>
+      <div class="row-fluid">
+        <div class="thumbnails product_list">
+          <% @products.each do |product| %>
+            <li class="span3">
+              <div class="thumbnail">
+                <%= image_tag "product2.jpg" %>
+                <div class="caption">
+                  <h5><%= link_to product.title, product_path(product) %></h5>
+                  <p><%= "$" %><%= product.price / 100     %></p>
+                </div>
+              </div>
+            </li>
+          <% end %>
+        </div>
+      </div>
+      
+
+      <div class="pagination pagination-centered">
+        <ul>
+          <li class="disabled">
+            <a>{:href => "#"} &laquo;</a>
+          </li>
+          <li class="active">
+            <a>{:href => "#"} 1</a>
+          </li>
+          <li>
+            <a>{:href => "#"} 2</a>
+          </li>
+          <li>
+            <a>{:href => "#"} 3</a>
+          </li>
+          <li>
+            <a>{:href => "#"} 4</a>
+          </li>
+          <li>
+            <a>{:href => "#"} 5</a>
+          </li>
+          <li class="disabled">
+            <a>{:href => "#"} &raquo;</a>
+          </li>
+        </ul>
+      </div>
+      <hr />
+      <div class="row-fluid footer">
+        <div class="span4">
+          <h3>Information</h3>
+          <ul>
+            <li>
+              <a>{:href => "#"}Contact</a>
+            </li>
+            <li>
+              <a>{:href => "#"}Delivery</a>
+            </li>
+            <li>
+              <a>{:href => "#"}FAQ</a>
+            </li>
+            <li>
+              <a>{:href => "#"}Terms and condition</a>
+            </li>
+          </ul>
+        </div>
+
+       <%= will_paginate @products %>
+
+        <div class="span4">
+          <h3>Stay in Touch</h3>
+          <ul>
+            <li>
+              <a>{:href => "#"} Facebook</a>
+            </li>
+            <li>
+              <a>{:href => "#"} Twitter</a>
+            </li>
+            <li>
+              <div class="control-group">
+                <div class="controls">
+                  <div class="input-prepend input-append">
+                    <div class="span add-on">
+                      <i class="icon-envelope"></i>
+                    </div>
+                    <input class="span6 appendedPrependedInput" />{:type => "text", :placeholder => "Enter your email"}<input class="btn" />{:type => "submit", :name=>"submit", :value => "Subcribe"}</div>
+                </div>
+              </div>
+            </li>
+          </ul>
+        </div>
+        <div class="span4">
+          <h3>Other stuff</h3>
+          <ul>
+            <li>
+              <a>{:href => "#"} Link</a>
+            </li>
+            <li>
+              <a>{:href => "#"} Link</a>
+            </li>
+            <li>
+              <a>{:href => "#"} Link</a>
+            </li>
+            <li>
+              <a>{:href => "#"} Link</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </body></html>
