--- a/app/views/shared/_sub_menu.html.erb
+++ b/app/views/shared/_sub_menu.html.erb
@@ -4,11 +4,11 @@
   <div class='span12 nav-menus'>
     <ul class='nav nav-pills'>
       <li>
-        <a href='#'>All Products</a>
+        <%= link_to 'All Products', products_path %>
       </li>
       <% categories.each do |category| %>  
         <li>
-        <a href='#'><%= category.name =%> </a>
+          <%= link_to category.name, category_path(category) %> 
         </li>
       <% end %> 
     </ul>
