moved admin related logic into admin controllers for Product and Category, also Order(still not complete)

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -106,28 +106,29 @@ body {
   }
 }
 
-.container#admin {
+#admin {
 
   .page-header {
     border-bottom: none;
   }
 
-  .status-panel {
-    border: 1px solid #ddd;
-  }
+}
 
-  .filter-box {
-    margin-top: 10px;
-    border: 1px solid #ddd;
-  }
+.status-panel {
+  border: 1px solid #ddd;
+}
 
-  .status-change {
-    font-weight: bold;
-    font-size: 16px;
+.filter-box {
+  margin-top: 10px;
+  border: 1px solid #ddd;
+}
 
-    span.transition {
-      margin-left: 10px;
-    }
+.status-change {
+  font-weight: bold;
+  font-size: 16px;
+
+  span.transition {
+    margin-left: 10px;
   }
 }
 
