--- a/app/views/shared/_admin_menu.html.erb
+++ b/app/views/shared/_admin_menu.html.erb
@@ -10,6 +10,7 @@
     <div class='tabbable'>
       <ul class='nav nav-tabs'>
         <%= admin_header_link 'Dashboard', admin_dashboard_path %>
+        <%= admin_header_link 'Manage Orders', admin_orders_path %>
         <%= admin_header_link 'Manage Products', admin_products_path %>
         <%= admin_header_link 'Manage Categories', admin_categories_path %>
         <%= admin_header_link 'Admin Profile', "#"%>
