--- a/app/views/admin/categories/edit.html.erb
+++ b/app/views/admin/categories/edit.html.erb
@@ -1,2 +1,11 @@
-<h1>Admin::Categories#edit</h1>
-<p>Find me in app/views/admin/categories/edit.html.erb</p>
+<% provide(:title, 'Admin Edit Category') %>
+
+  <div class='row-fluid'>
+    <div class='span12'>
+      <div class='span6'>
+        <h3>Edit Existing Category</h3>
+      </div>
+    </div>
+  </div>
+  <%= render 'form' %>
+
