--- a/app/views/admin/products/new.html.erb
+++ b/app/views/admin/products/new.html.erb
@@ -1,9 +1,9 @@
-<div class='row-fluid'>
-  <div class='span12'>
-    <div class='span6'>
-      <h3>Add New Product</h3>
+<% provide(:title, 'Admin Add New Product') %>
+  <div class='row-fluid'>
+    <div class='span12'>
+      <div class='span6'>
+        <h3>Add New Product</h3>
+      </div>
     </div>
   </div>
-</div>
-<%= render 'form' %>
-
+  <%= render 'form' %>
