--- a/app/views/admin/products/show.html.erb
+++ b/app/views/admin/products/show.html.erb
@@ -1,34 +1,9 @@
-<div class='row-fluid'>
-  <div class='span12'>
-    <div class='page-header'>
-      <h1>Administration Portal</h1>
+<% provide(:title, 'Admin Product Detail') %>
+  <div class='row-fluid'>
+    <div class='span12'>
+      <div class='span6'>
+        <h3>Product Name</h3>
+      </div>
     </div>
   </div>
-</div>
-<div class='row-fluid'>
-  <div class='tabbable'>
-    <ul class='nav nav-tabs'>
-      <li>
-        <a data-toggle='tab' href='#'>Dashboard</a>
-      </li>
-      <li class='active'>
-        <a data-toggle='tab' href='#'>Manage Products</a>
-      </li>
-      <li>
-        <a data-toggle='tab' href='#'>Manage Categories</a>
-      </li>
-      <li>
-        <a data-toggle='tab' href='#'>Admin Profile</a>
-      </li>
-    </ul>
-  </div>
-</div>
-
-<div class='row-fluid'>
-  <div class='span12'>
-    <div class='span6'>
-      <h3>Product Name</h3>
-    </div>
-  </div>
-</div>
 
