--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,15 +1,14 @@
 <p id="notice"><%= notice %></p>
 
-
-<!-- <p>See all associated products:<br/>
- -->  
-
  <ul class="breadcrumb">
   <li>
     <span class="divider"><!----></span>
   </li>
   <li class="active">
-    <%= link_to 'Home', '#' %><%= @link %>
+    <li>
+    <%= link_to 'Home', '/' %>
+  </li> / 
+  <li><%= @category.name %>
   </li>
 </ul>
 
@@ -29,8 +28,7 @@
           <%= image_tag "product1.jpg" %>
           <div class="caption">
             <p><%= link_to product.title, product_path(product) %></p>
-            <p><%= link_to product.price_in_dollars, product_path(product) %></p>
-            <!-- <p>$20.50</p> -->
+            <p><%= number_to_currency(product.price_in_dollars)%></p>
           </div>
         </div>
       </li>
@@ -38,10 +36,3 @@
     </div>
   </div>
 </div>
-
-  
-<!-- </p>
- -->
-
-<%= link_to 'Edit', edit_category_path(@category) %> |
-<%= link_to 'Back', categories_path %>
