figured out pagination, finished up products index

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -13,6 +13,8 @@
         </li>
       </ul>
 
+      <%= paginate @products %>
+
       
       <div class="row-fluid">
         <div class="span12">
@@ -37,6 +39,8 @@
           <% end %>
         </div>
       </div>
+
+
 
       
   
